--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,76 @@
+$line-height: 40px;
+$timline-title-height: 40px;
+$time-title-height: 30px;
+$block-width: 10px;
+$item-height: 30px;
+
 .timeline {
   border: 1px solid #c7c7c7;
+  padding: 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  text-align: center;
+  .side-bar {
+    width: 10%;
+    display: flex;
+    flex-direction: column;
+    border: 0px solid #b8b8b8;
+    border-right-width: 1px;
+    margin-right: 7px;
+    padding-right: 7px;
+    .sidebar-title {
+      height: $time-title-height+$timline-title-height; /* Time title height + TIMELINE title height */
+      border: 0px solid #b8b8b8;
+      border-bottom-width: 1px;
+    }
+    .group-item {
+      height: $line-height; /* Line height */
+    }
+  }
+  
+  .timeline-content {
+    width: 90%;
+    .timeline-header {
+      height: $timline-title-height; /* TIMELINE title height */
+    }
+    .timeline-window {
+      width: 100%;
+      overflow-x: auto;
+      overflow-y: hidden;
+      .coltitle-wrapper {
+        display: inline-flex;
+        height: $time-title-height; /* Time title height */
+        border: 0px solid #b8b8b8;
+        border-bottom-width: 1px;
+        text-align: left;
+        .col-title {
+          width: $block-width; /* Block width */
+        }
+      }
+      .ticker {
+        border: 1px solid red;
+        border-width: 0px 0px 0px 1px;
+        position: absolute;
+        height: 95%;
+      }
+      .items-group {
+        display: inline-flex;
+        flex-direction: row;
+        position: relative;
+        height: $line-height; /* Line height */
+        .time-slot {
+          width: $block-width;/* Block width */
+          height: $line-height; /* Line height */
+        }
+        .timeline-item {
+          position: absolute;
+          display: inline-block;
+          overflow: hidden;
+          height: $item-height;
+          border: 1px solid #b8b8b8;
+        }
+      }
+    }
+  }
 }
