--- a/src/style.scss
+++ b/src/style.scss
@@ -38,6 +38,10 @@ $item-height: 30px;
       width: 100%;
       overflow-x: auto;
       overflow-y: hidden;
+      .scrollable {
+        display: inline-block;
+        position: relative;
+      }
       .coltitle-wrapper {
         display: inline-flex;
         height: $time-title-height; /* Time title height */
